--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-iframe": "^1.8.0",
     "react-pro-sidebar": "^0.5.0",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
